# gpuupbp

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark.py.in
doc/: changes.md  structure.md  todo.md
gpuupbp/: CMakeLists.txt  gpuupbp.cpp
gpuupbp/host/: camera.hpp  env_map.hpp  exception.hpp  framebuffer.cpp  framebuffer.hpp  light.hpp  material.hpp  medium.hpp  scene.hpp
gpuupbp/kernel/: bsdf.cuh  camera.cuh  defs.cuh  distribution.cuh  env_map.cuh  exception.cu  frame_buffer.cuh  functs_camera.cuh  functs_light.cuh  functs_shared.cuh  intersection.cuh  intersector.cu  intersector.cuh  light.cuh  medium.cuh  optix_util.cuh  params_def.cuh  path_weight.cuh  phase_function.cuh  pstack.cuh  rng.cuh  sample.cuh  sarray.cuh  scene.cuh  trace_camera.cu  trace_light.cu  types.cuh
gpuupbp/kernel/pde/: functs_bb1d.cuh  functs_bp2d.cuh  functs_pb2d.cuh  functs_pp.cuh  functs_pp3d.cuh  functs_surf.cuh  program_bb1d.cu  program_bp2d.cu  program_pb2d.cu  program_pp3d.cu  program_surf.cu
gpuupbp/misc/: config.cpp  config.hpp  logger.cpp  logger.hpp  optix_helper.cpp  optix_helper.hpp  scene_config.hpp  scene_loader.hpp  scene_loader_obj.cpp  scene_loader_predef.cpp  timer.cpp  timer.hpp  tinyexr_wrapper.cpp  tinyexr_wrapper.hpp
gpuupbp/renderer/: renderer.cpp  renderer.hpp  renderer_init.cpp
gpuupbp/shared/: bsdf.h  camera.h  env_map.h  frame.h  framebuffer.h  intersect_defs.h  launch_params.h  light.h  light_vertex.h  material.h  matrix.h  medium.h  preprocessor.h  record.h  scene.h  shared_defs.h  shared_enums.h  vec_math.h  vec_math_ext.h
scenes/: README.md
scenes/bathroom/: README.md  run.bat
scenes/bistro/: README.md  bistro.mtl  bistro.obj.aux  run.bat
scenes/bunny/: README.md  bunny.obj.aux  do_not_run.bat  run.bat
scenes/bunnymatrix/: README.md  bunnymatrix.mtl  bunnymatrix.obj.aux  run.bat
scenes/bunnyrow/: README.md  bunnyrow.mtl  bunnyrow.obj.aux  run.bat
scenes/mirrorballs/: LICENSE.txt  README.md  run.bat
scenes/sanmiguel/: README.md  run.bat  sanmiguel.mtl  sanmiguel.obj.aux  sanmiguel.zip.003
scenes/stilllife/: README.md  run.bat  stilllife.mtl  stilllife.obj.aux
scenes/suntemple/: README.md  run.bat  suntemple.mtl  suntemple.obj.aux
tools/: CMakeLists.txt
tools/compare/: CMakeLists.txt  README.md  main.c
tools/validate/: a_00_delete_cpu.bat  a_01_delete_gpu.bat  a_02_generate_cpu.bat  a_03_generate_gpu.bat  a_04_compare.bat  a_README.md  a_funct_compare.bat  a_funct_delete.bat  a_funct_generate_cpu.bat  a_funct_generate_gpu.bat  a_params.txt
